fix(style): v-align position in the middle

--- a/app/_app-common.scss
+++ b/app/_app-common.scss
@@ -231,6 +231,7 @@ GridLayout.details Label {
     font-weight: bold;
     margin-right: 10;
     margin-left: 10;
+    vertical-align: middle;
 }
 
 .red-number-big {
